@@ -1,9 +1,9 @@
 package com.sbaars.adventofcode.year21.days;
 
 import static com.sbaars.adventofcode.common.ReadsFormattedString.readString;
-import static java.util.stream.Collectors.toList;
 
 import com.sbaars.adventofcode.common.Direction;
+import com.sbaars.adventofcode.common.Loc;
 import com.sbaars.adventofcode.year21.Day2021;
 import java.awt.*;
 import java.util.List;
@@ -21,18 +21,19 @@ public class Day2 extends Day2021 {
 
   @Override
   public Object part1() {
-    List<Move> input = dayStream().map(e -> readString(e, "%s %n", Move.class)).collect(toList());
-    Point p = new Point(0, 0);
-    for(Move m : input) {
-      Direction d = m.direction();
-      p = d.move(p, Math.toIntExact(m.n));
-    }
+    Loc p = dayStream()
+        .map(e -> readString(e, "%s %n", Move.class))
+        .reduce(
+            new Loc(),
+            (acc, m) -> new Loc(m.direction().move(acc.getPoint(), Math.toIntExact(m.n))),
+            Loc::move
+        );
     return p.x * p.y;
   }
 
   @Override
   public Object part2() {
-    List<Move> input = dayStream().map(e -> readString(e, "%s %n", Move.class)).collect(toList());
+    List<Move> input = dayStream().map(e -> readString(e, "%s %n", Move.class)).toList();
     Point p = new Point(0, 0);
     long aim = 0;
     for(Move m : input) {
